--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,9 @@
 		This app is audio compass using 3D sound
 		\n
 		\nSource code available at:
-		\nhttps://github.com/harvie
+		\nhttps://github.com/harvie/northdog
+		\nReport issues at:
+		\nhttps://github.com/harvie/northdog/issues
 		\n
 		\nBased on James Baster\'s "Just A Damn Compass"
 		\nhttps://github.com/jarofgreen/Just-A-Damn-Compass
